# monk

./: .gitignore  Cargo.toml  interpreter_hist.txt  lexer.py  main.py  parser.py  requirements.txt  sample.mnk
examples/: basic-assignment.mnk  basic-loop.mnk  func-defs.mnk
src/: config.py  lexer.py  main.py  main.rs  parser.py
