[package]
name = "monk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concolor = "0.0.12"
nom = "7"
ariadne = "0.1.5"
colored = "2.0.0"
clap = { version = "4.1.8", features = ["derive"] }
rustyline = "11.0.0"
